Updated readme file

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,7 +3,7 @@ version = 0.1
 stack_name = "shopping-cart-nested-stack"
 resolve_s3 = true
 s3_prefix = "shopping-cart-nested-stack"
-region = "us-east-1"
+region = "us-west-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
 disable_rollback = true
